@@ -12,12 +12,6 @@ CC Implementation of MIDIbox SEQ
      Controls the Global Scale
      "Global Scale" control mode must be enabled within the UTIL->OPT menu
 
-   o CC#112-CC#115 (0x70-0x73)
-     Change Pattern of Group #1/2/3/4
-
-   o CC#116-CC#119 (0x74-0x77)
-     Bank Pattern of Group #1/2/3/4
-
    o CC#98 (0x62 - NRPN LSB)
      Selects the Sequencer Parameter which should be modified via NRPN
      See list below
@@ -29,6 +23,16 @@ CC Implementation of MIDIbox SEQ
 
    o CC#6 (0x06 - NRPN Value, LSB)
      Sets a Sequencer Parameter depending on the preselected track and parameter number
+
+   o CC#111 (0x6f)
+     Dumps the values of a Mixer map (0..127)
+
+   o CC#112-CC#115 (0x70-0x73)
+     Change Pattern of Group #1/2/3/4
+
+   o CC#116-CC#119 (0x74-0x77)
+     Bank Pattern of Group #1/2/3/4
+
 
 Example for changing the Octave Transpose value of Track 3 to -1 Octave:
    B0 62 31 63 02 06 0F
